--- a/index.html
+++ b/index.html
@@ -156,22 +156,22 @@
     <div class="flex-row">
       <div class="flex-child input-group">
         <label>球员姓名（每行一个）：</label>
-        <textarea id="playerNames" rows="3" placeholder="张三\n李四\n王五"></textarea>
+        <textarea id="playerNames" rows="3" placeholder="林丹\李宗伟\安塞龙"></textarea>
       </div>
       <div class="flex-child input-group">
-        <label>对应水平（初学1，高级10，空则自动分配）：</label>
+        <label>对应水平（数字1-10 初学1，最高级10，空则自动分配）：</label>
         <textarea id="playerLevels" rows="3" placeholder="7\n6\n8"></textarea>
       </div>
     </div>
 
     <div class="input-group">
       <label>中途加入的球员姓名（每行一个）：</label>
-      <textarea id="additionalPlayers" rows="2" placeholder="新增球员姓名\n如：赵六\n王二"></textarea>
+      <textarea id="additionalPlayers" rows="2" placeholder="新增球员姓名\如：石宇奇\安东森"></textarea>
     </div>
 
     <div class="flex-row">
       <div class="flex-child input-group">
-        <label>中途加入球员的水平（初学1，高级10，空则自动分配）：</label>
+        <label>中途加入球员的水平（1-10 初学1，最高级10，空则自动分配）：</label>
         <textarea id="additionalLevels" rows="2" placeholder="7\n8"></textarea>
       </div>
       <div class="flex-child input-group">
