--- a/index.html
+++ b/index.html
@@ -156,23 +156,23 @@
     <div class="flex-row">
       <div class="flex-child input-group">
         <label>玩家名称（每行一个）：</label>
-        <textarea id="playerNames" rows="3" placeholder="张三\n李四\n王五"></textarea>
+        <textarea id="playerNames" rows="3" placeholder="LINDAN\李CHONG WEI\Momota"></textarea>
       </div>
       <div class="flex-child input-group">
         <label>等级（1为初学者，10为高手，留空自动分配）：</label>
-        <textarea id="playerLevels" rows="3" placeholder="7\n6\n8"></textarea>
+        <textarea id="playerLevels" rows="3" placeholder="7\6\8"></textarea>
       </div>
     </div>
 
     <div class="input-group">
       <label>中途加入玩家（每行一个）：</label>
-      <textarea id="additionalPlayers" rows="2" placeholder="赵六\n王二"></textarea>
+      <textarea id="additionalPlayers" rows="2" placeholder="SHI YUQI"></textarea>
     </div>
 
     <div class="flex-row">
       <div class="flex-child input-group">
         <label>中途加入玩家等级：</label>
-        <textarea id="additionalLevels" rows="2" placeholder="7\n8"></textarea>
+        <textarea id="additionalLevels" rows="2" placeholder="7\8"></textarea>
       </div>
       <div class="flex-child input-group">
         <label>中途加入开始回合数：</label>
